dnl Process this file with autoconf to produce a configure script.
AC_INIT([main], [0.1], [http://developer.berlios.de/bugs/?func=addbug&group_id=1564])

AC_PROG_MAKE_SET

AM_INIT_AUTOMAKE([$PACKAGE_NAME], [$PACKAGE_VERSION])

dnl Setup for automake
AC_CONFIG_SRCDIR([libpou/pou.m4])

AC_CONFIG_SUBDIRS([libpou PoUgui])

AC_OUTPUT([Makefile])

