dnl Process this file with autoconf to produce a configure script.
AC_INIT([pou], [0.1], [http://developer.berlios.de/bugs/?func=addbug&group_id=1564])
AC_CONFIG_AUX_DIR(admin)
AC_PREREQ([2.5])

dnl Setup for automake
AM_INIT_AUTOMAKE([$PACKAGE_NAME], [$PACKAGE_VERSION])

AC_PROG_MAKE_SET

AC_CONFIG_SRCDIR([libpou/pou.m4])
AC_CONFIG_SUBDIRS([libpou PoUgui])

AC_OUTPUT([Makefile])

